# daylapse

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: capture.py  config.py  day_processor.py  main.py  motion.py
daylapse/: __init__.py  capture.py  config.py  main.py
daylapse/recorder/: capture.py  main.py  motion.py
daylapse/viewer/: __init__.py  config.py  main.py  storage.py
daylapse/viewer/static/: style.css
daylapse/viewer/templates/: day.html  index.html
