[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daylapse"
version = "0.1.0"
authors = [{name = "Pavel Jiranek", email = "pavel.jiranek@gmail.com"}]
description = "Motion-triggered webcam capture service"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
]

[project.scripts]
daylapse-recorder = "daylapse.recorder.main:main"
daylapse-viewer = "daylapse.viewer.main:main"

[tool.setuptools.package-data]
"daylapse.viewer" = ["templates/*.html", "static/*.css"]

[tool.setuptools.packages.find]
where = ["."]
include = ["daylapse*"]
